// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col рендерит по дефолту 1`] = `
<div
  className="amber-col"
/>
`;

exports[`Col рендерит с динамическим размером 1`] = `
<div
  className="amber-col amber-col_columns-xs_2 amber-col_columns-sm_4 amber-col_columns-xl_2"
/>
`;

exports[`Col рендерит с простыми вертикальными паддингами 1`] = `
<div
  className="amber-col amber-col_paddingTop-xs_xs amber-col_paddingBottom-xs_xs"
/>
`;

exports[`Col рендерит со статическим размером 1`] = `
<div
  className="amber-col amber-col_columns-xs_3"
/>
`;

exports[`Col с непростым flex 1`] = `
<div
  className="amber-col amber-col_flex-xs"
/>
`;

exports[`Col с непростым grow 1`] = `
<div
  className="amber-col amber-col_grow-xs_1 amber-col_grow-lg_3"
/>
`;

exports[`Col с непростым horizontalAlign 1`] = `
<div
  className="amber-col amber-col_horizontalAlign-xs_end amber-col_horizontalAlign-lg_beginning"
/>
`;

exports[`Col с непростым offset 1`] = `
<div
  className="amber-col amber-col_offset-xs_1 amber-col_offset-lg_3"
/>
`;

exports[`Col с непростым shrink 1`] = `
<div
  className="amber-col amber-col_shrink-xs_1 amber-col_shrink-lg_3"
/>
`;

exports[`Col с непростым verticalAlign 1`] = `
<div
  className="amber-col amber-col_verticalAlign-xs_top amber-col_verticalAlign-lg_bottom"
/>
`;

exports[`Col с непростыми вертикальными паддингами 1`] = `
<div
  className="amber-col amber-col_paddingTop-xs_m amber-col_paddingTop-xl_sm amber-col_paddingBottom-xs_l amber-col_paddingBottom-sm_m"
/>
`;

exports[`Col с простым flex 1`] = `
<div
  className="amber-col amber-col_flex-xs"
/>
`;

exports[`Col с простым grow 1`] = `
<div
  className="amber-col amber-col_grow-xs_1"
/>
`;

exports[`Col с простым horizontalAlign 1`] = `
<div
  className="amber-col amber-col_horizontalAlign-xs_end"
/>
`;

exports[`Col с простым offset 1`] = `
<div
  className="amber-col amber-col_offset-xs_23"
/>
`;

exports[`Col с простым shrink 1`] = `
<div
  className="amber-col amber-col_shrink-xs_1"
/>
`;

exports[`Col с простым verticalAlign 1`] = `
<div
  className="amber-col amber-col_verticalAlign-xs_top"
/>
`;
